# sparrow

./: CMakeLists.txt  FILECOPY.bat
sparrow/_lib/: module1.pyd  module2.pyd
sparrow/_lib/src/LinearModel/: CMakeLists.txt  LinearModel.cpp  LinearRegressor.cpp  LinearRegressor.h
sparrow/_lib/src/OtherModule/: CMakeLists.txt  OtherModule.cpp  function1.h  function2.cpp  function2.h
sparrow/_lib/src/module1/: CMakeLists.txt  function1.cpp  function1.h  module1_ensemble.cpp
sparrow/_lib/src/module2/: CMakeLists.txt  module2_ensemble.cpp
sparrow/models/: LinearModel.py
sparrow/test/: Test_Linear_Model.py
