include_directories(C:\\Users\\gyh\\anaconda3\\envs\\cyn\\lib\\site-packages\\pybind11\\include)
include_directories(C:\\Users\\gyh\\anaconda3\\envs\\cyn\\include)
link_directories(C:\\Users\\gyh\\anaconda3\\envs\\cyn\\libs)
aux_source_directory(. DIR_SRCS)
add_library(LinearModel SHARED ${DIR_SRCS})
set_target_properties(LinearModel PROPERTIES SUFFIX ".pyd")
target_link_libraries(LinearModel)